fixed kafka types + some logic